--- a/BulkyWeb/BulkyWeb.csproj
+++ b/BulkyWeb/BulkyWeb.csproj
@@ -19,7 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Bulky.DataAccess\Bulky.DataAccess.csproj" />
     <ProjectReference Include="..\Bulky.Utility\Bulky.Utility.csproj" />
-    <ProjectReference Include="..\BulkyModels\BulkyModels.csproj" />
+    <ProjectReference Include="..\BulkyModels\Bulky.Models.csproj" />
   </ItemGroup>
 
   <ItemGroup>
