--- a/BulkyWeb/appsettings.Development.json
+++ b/BulkyWeb/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-SMEUDGE\\SQLEXPRESS;Database=Bulky1;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
